Presenter layer refactoring